# evdev-dump

./: .gitignore  Makefile  Makefile.am  README.md  bootstrap  configure.ac  evdev-dump.c  event2str.inc.sh  gen_event2str_inc.sh  make_event2str_c
